# src/api/routes/routes.ts
@@ -29,11 +29,15 @@ const models: TsoaRoute.Models = {
         "dataType": "refObject",
         "properties": {
             "name": { "dataType": "string", "required": true },
-            "address": { "dataType": "string", "required": true },
-            "telephone": { "dataType": "string", "required": true },
+            "otherName": { "dataType": "string", "required": true },
             "rbqNum": { "dataType": "string", "required": true },
-            "neqId": { "dataType": "double", "required": true },
             "status": { "ref": "StatusType", "required": true },
+            "deliveranceDate": { "dataType": "datetime", "required": true },
+            "paymentDate": { "dataType": "datetime", "required": true },
+            "neqId": { "dataType": "double", "required": true },
+            "address": { "dataType": "string", "required": true },
+            "email": { "dataType": "string", "required": true },
+            "telephone": { "dataType": "string", "required": true },
         },
         "additionalProperties": true,
     },
